@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> Flexc++ (Version 2.03.01) User Guide </title>
+<title> Flexc++ (Version 2.03.02) User Guide </title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
@@ -35,7 +35,7 @@ in <strong>C++</strong>, and merely generating <strong>C++</strong> code. Most f
 be usable with <strong>flexc++</strong>, with minor adjustments (see also `<a href="flexc++02.html#differences">differences
 with flex/flex++ 2</a>').
 <p>
-This edition of the manual documents version 2.03.01 and provides detailed
+This edition of the manual documents version 2.03.02 and provides detailed
 information on <strong>flexc++</strong>'s use and inner workings. Some texts are adapted from the
 <a href="http://flex.sourceforge.net/manual/index.html">flex manual</a>.  The manual
 page <strong>flexc++</strong>(1) provides an overview of the command line options and
